adding 2 more problems, currently on 3d printing on code jam qualification round

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,21 @@
 {
-    "files.associations": {
-        "*.css": "scss",
-        "iostream": "cpp",
-        "random": "cpp",
-        "array": "cpp",
-        "bitset": "cpp",
-        "string_view": "cpp",
-        "initializer_list": "cpp",
-        "ranges": "cpp",
-        "span": "cpp",
-        "stacktrace": "cpp",
-        "regex": "cpp",
-        "valarray": "cpp",
-        "*.tcc": "cpp",
-        "iosfwd": "cpp"
-    }
+  "files.associations": {
+    "*.css": "scss",
+    "iostream": "cpp",
+    "random": "cpp",
+    "array": "cpp",
+    "bitset": "cpp",
+    "string_view": "cpp",
+    "initializer_list": "cpp",
+    "ranges": "cpp",
+    "span": "cpp",
+    "stacktrace": "cpp",
+    "regex": "cpp",
+    "valarray": "cpp",
+    "*.tcc": "cpp",
+    "iosfwd": "cpp",
+    "numbers": "cpp",
+    "chrono": "cpp",
+    "ostream": "cpp"
+  }
 }
